# lance-graph-ogar — the OGAR (Open Graph of Active Record) activation crate.
# EXCLUDED from the lance-graph workspace (own [workspace] root below).
#
# Clean separation (operator, 2026-06-20):
#   lance-graph-ontology  =  OGIT   (TTL/RDF hydration spine)
#   lance-graph-ogar      =  OGAR   (Active-Record Class / ClassView / adapters)
#
# This crate is the lance-graph-side ACTIVATION + re-export of OGAR's full AR
# surface. OGAR is the Active-Record Core and already speaks the contract:
#   ogar-vocab::Class               = the calcified AR shape (attributes + family
#                                     Associations); `canonical_concept_id` == ClassId
#   ogar-class-view::OgarClassView  impl lance_graph_contract::ClassView
#                                     (32 promoted concepts → ObjectView/render_rows)
#   ogar-ontology                   = prefix conventions + NiblePath identity routing
#   ogar-adapter-surrealql          = emit(Class) -> SurrealQL DDL (the DO arm)
#
# Auto-activation = Cargo presence: a build graph that pulls THIS crate gets the
# real OGAR Class/ClassView/codebook + the parity-guard (lib.rs): a COMPILE-TIME
# length fuse (`const _` assert that the mirror and `ogar_vocab::class_ids::ALL`
# have equal count — fires in ANY build, `cargo build` included) plus a runtime
# `parity::assert_codebook_parity()` for the full id/domain bijection (call it at
# consumer startup; also asserted by this crate's tests = the CI gate). A build
# WITHOUT this crate uses the contract's zero-dep mirror + the bare ClassView
# trait. OGAR never depends on the lance-graph ENGINE — only the zero-dep contract.
#
# ── ONE contract source (codex P2, PR #564) ──
# The canonical `lance-graph-contract` in-repo is the PATH copy (`crates/
# lance-graph-contract`) — what `lance-graph` and `symbiont` already path-dep.
# `ogar-class-view` (in the OGAR repo) hard-codes a `git` dep on
# `AdaWorldAPI/lance-graph#main` for ITS standalone build; Cargo treats path and
# git as DISTINCT crates even at the same version, so `OgarClassView` would impl a
# DIFFERENT `ClassView` than the engine expects. The `[patch]` below redirects
# that transitive git contract onto the SAME path copy, so this crate's standalone
# build has exactly one contract source = the path copy.
#
# CONSUMER REQUIREMENT (cargo limitation): `[patch]` only applies in the WORKSPACE
# ROOT. When an in-repo workspace root (e.g. `crates/symbiont`) adds
# `lance-graph-ogar`, THIS crate's `[patch]` is ignored — that root MUST repeat:
#   [patch."https://github.com/AdaWorldAPI/lance-graph"]
#   lance-graph-contract = { path = "../lance-graph-contract" }
# to unify ogar-class-view's transitive git contract onto its path copy. Without
# it the OgarClassView `impl ClassView` won't typecheck against the engine's.
#
# Build/verify:  cargo test --manifest-path crates/lance-graph-ogar/Cargo.toml
# Full DO arm :  cargo test --manifest-path crates/lance-graph-ogar/Cargo.toml \
#                  --features surrealql-parser   (pulls surrealdb-ast/parser, rust 1.95+)

[package]
name = "lance-graph-ogar"
version = "0.1.0"
edition = "2021"
publish = false
description = "OGAR (Open Graph of Active Record) activation crate: re-exports ogar-vocab Class/codebook + ogar-class-view (impl lance_graph_contract::ClassView) + ogar-ontology + ogar-adapter-surrealql, with a codebook parity-guard against the contract's zero-dep ogar_codebook mirror. Auto-activates the real OGAR AR surface wherever it is compiled into the build (golden image / AR-aware consumers)."
license = "Apache-2.0"

# Own workspace root — keeps this crate out of the parent lance-graph workspace.
[workspace]

[features]
default = []
# The unmap(SurrealQL) -> Class half of the DO arm: pulls surrealdb-ast +
# surrealdb-parser (heavy; rust-version 1.95+). The emit() DDL formatter half is
# always available (no surrealdb deps).
surrealql-parser = ["ogar-adapter-surrealql/surrealdb-parser"]
# serde passthrough for the OGAR IR types.
serde = ["ogar-vocab/serde", "ogar-adapter-surrealql/serde"]

[dependencies]
# Contract surface (zero-dep): ClassView / ObjectView / ClassId / NodeGuid + the
# ogar_codebook wire-compat mirror the parity-guard checks. PATH copy = the
# canonical in-repo source (same as lance-graph / symbiont); the [patch] below
# folds ogar-class-view's transitive git contract onto it = ONE source.
lance-graph-contract = { path = "../lance-graph-contract" }

# ── OGAR Active-Record forks: git deps @ main (the canonical superset; matches
#    symbiont's pins so they resolve to ONE source in the golden image) ──
ogar-vocab = { git = "https://github.com/AdaWorldAPI/OGAR", branch = "main" }
ogar-class-view = { git = "https://github.com/AdaWorldAPI/OGAR", branch = "main" }
ogar-ontology = { git = "https://github.com/AdaWorldAPI/OGAR", branch = "main" }
# default features only = the light emit() DDL formatter (no surrealdb tree);
# the parser half is opt-in via this crate's `surrealql-parser` feature.
ogar-adapter-surrealql = { git = "https://github.com/AdaWorldAPI/OGAR", branch = "main" }

# Fold ogar-class-view's transitive `lance-graph-contract` (git
# AdaWorldAPI/lance-graph#main) onto the SAME path copy this crate uses, so there
# is exactly ONE contract crate and `OgarClassView`'s `impl ClassView` is for it
# (codex P2, PR #564). Applies in THIS crate's standalone build (its own
# [workspace] root); an in-repo workspace root that adds this crate must repeat
# the patch (see the CONSUMER REQUIREMENT note in the header).
[patch."https://github.com/AdaWorldAPI/lance-graph"]
lance-graph-contract = { path = "../lance-graph-contract" }
