[package]
name = "lance-graph-ontology"
version = "0.1.0"
edition = "2021"
description = "OGIT-canonical ontology spine: TTL hydration, runtime dictionary cache, and tenant namespace bridges over the lance-graph contract surface."
license = "Apache-2.0"
keywords = ["ontology", "ogit", "ttl", "rdf", "lance"]

[dependencies]
# Contract surface: PropertySpec / Marking / SemanticType / Schema / Ontology
# / SchemaExpander. Zero-dep crate by design — we depend on it, not the reverse.
lance-graph-contract = { path = "../lance-graph-contract" }

# Canonical class schema (codebook + Class fns + PortSpec). The
# `UnifiedBridge<P: PortSpec>` harness in `crate::bridges::unified` is
# parameterised by `ogar_vocab::ports::PortSpec`, so per-port bridges
# (OpenProjectBridge, RedmineBridge, …) are type aliases over the
# harness — the namespace / bridge_id / public-name-alias data all
# come from OGAR class schema, not from this crate.
# OGAR `main` carries `ports::PortSpec` + the project-mgmt ports AND the
# `HealthcarePort` + 0x09XX Health codebook that
# `MedcareBridge = UnifiedBridge<HealthcarePort>` needs (OGAR #91 merged).
# Tracks `main`, matching the sibling `lance-graph-ogar` / `cognitive-stack`
# / `symbiont` pins — one OGAR source for the whole graph.
ogar-vocab = { git = "https://github.com/AdaWorldAPI/OGAR", branch = "main" }

# TTL parser. oxttl is the smallest streaming Turtle parser in the workspace's
# dependency graph and matches the shape of OGIT's per-entity .ttl files.
# Pinned to the same oxrdf version as oxrdfxml below — duplicate-version
# pulls of oxrdf produce confusing type mismatches at the parser boundary.
oxttl = "0.2"
oxrdf = "0.3"
# RDF/XML parser. FIBO ships as RDF/XML rather than Turtle, so the
# OwlHydrator dispatches by extension and routes .rdf / .owl-with-XML
# content here.
oxrdfxml = "0.2"

# XML parser used by XsdHydrator (ZUGFeRD/UBL/ISO 20022 ship as XSD).
# Already transitively present via oxrdfxml; we declare it directly so
# the XSD-name-extraction path doesn't depend on oxrdfxml's version pin.
quick-xml = "0.37"

# Errors. thiserror keeps the public Error enum readable without serde.
thiserror = "2"

# Lazy globals for the SemanticType lookup table built from semantic_types.toml.
once_cell = "1"

# TOML config (semantic_types.toml). Used as a value-shape parser only — no
# serde derives on registry types per CLAUDE.md "no JSON serialization in types".
toml = { version = "0.8", default-features = false, features = ["parse"] }

# Hashing for idempotent TTL hydration (root checksum + per-fragment checksum).
sha2 = "0.10"

# Lance-backed dictionary cache is feature-gated so the crate compiles without
# protoc (lance-encoding's build-time dep). The default in-memory registry is
# the canonical surface for tests and consumers that don't need persistence.
lance = { version = "=7.0.0", optional = true }
# arrow bumped to 58 to match lance 6.0's transitive arrow version.
# TODO(lance-bump): align rest of workspace on arrow 58 once feasible.
arrow = { version = "58", optional = true }
arrow-array = { version = "58", optional = true }
arrow-schema = { version = "58", optional = true }
tokio = { version = "1", default-features = false, features = ["rt", "macros", "fs"], optional = true }
futures = { version = "0.3", optional = true }

[features]
default = []
# Lance dataset persistence for the ontology_dictionary table. Requires protoc
# at build time (lance-encoding pulls prost-build). Off by default so the
# in-memory registry path is reachable without the system dependency.
lance-cache = ["dep:lance", "dep:arrow", "dep:arrow-array", "dep:arrow-schema", "dep:tokio", "dep:futures"]

[dev-dependencies]
tempfile = "3"

# D-CASCADE-V1-11 — O(1) probe bench. Instant-based (no criterion) to keep
# dev-deps minimal; criterion is a workspace dep elsewhere but adds compile
# overhead this crate doesn't need for a single Instant::now() probe.
[[bench]]
name = "o1_probe"
harness = false
path = "benches/o1_probe.rs"
