[package]
name = "lance-graph-osint"
version = "0.1.0"
edition = "2021"
rust-version = "1.94"
description = "OSINT intelligence pipeline: Jina Reader → NARS triplets → AriGraph → Palette routing. No external LLM API."
license = "Apache-2.0"

[dependencies]
# Thinking layer
lance-graph-planner = { path = "../lance-graph-planner" }

# Protocol + codec
causal-edge = { path = "../causal-edge" }
bgz17 = { path = "../bgz17" }
p64-bridge = { path = "../p64-bridge" }
deepnsm = { path = "../deepnsm" }

# Hardware
ndarray = { path = "../../../ndarray", default-features = false, features = ["std"] }

# HTTP client for fetching raw web pages
ureq = { version = "3", features = ["native-tls"] }
webpki-roots = "1"

# Async spider framework (optional, for production crawling)
# Forked to AdaWorldAPI/spider for lance-graph integration
spider = { git = "https://github.com/AdaWorldAPI/spider.git", default-features = false, features = ["sync"], optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros"], optional = true }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# AriGraph (optional — requires lance-graph core which needs protoc)
# lance-graph = { path = "../lance-graph", optional = true }

[features]
default = []
# arigraph = ["dep:lance-graph"]
spider-crawl = ["dep:spider", "dep:tokio"]

[dev-dependencies]
