[package]
name = "lance-graph-planner"
version = "0.1.0"
edition = "2021"
description = "Unified query planner: MUL+Compass -> Thinking Orchestration -> Graph Query Planning"
license = "Apache-2.0"

[dependencies]
# Core
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"

# Error handling
thiserror = "2"

# Async
tokio = { version = "1", features = ["rt", "sync"] }

# Logging
tracing = "0.1"

# Hardware acceleration layer (mandatory)
ndarray = { path = "../../../ndarray", default-features = false, features = ["std"] }

# Causal edge protocol (CausalEdge64, NarsTables, Pearl hierarchy)
causal-edge = { path = "../causal-edge" }

# p64: convergence point — both ndarray and lance-graph meet here
p64 = { path = "../../../ndarray/crates/p64" }

# p64-bridge: CausalEdge64 + bgz17 → CognitiveShader
p64-bridge = { path = "../p64-bridge" }

# bgz17: palette semiring codec (Base17 VSA, 121 tests)
bgz17 = { path = "../bgz17" }

# HTTP server (optional, behind "serve" feature)
axum = { version = "0.8", optional = true }

# Contract crate (route_tensor, CodecRoute) — always available
lance-graph-contract = { path = "../lance-graph-contract" }

# SHA256 for manifest checksums (research feature only)
sha2 = { version = "0.10", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[features]
default = []
jit = []
datafusion = []
serve = ["dep:axum", "tokio/rt-multi-thread", "tokio/macros"]
# Lab feature: enables /v1/research/* endpoints for remote-controlled
# codec benchmarking, tensor statistics, and ICC measurement. Same gate
# name as bgz-tensor's `lab` — one flag controls the whole research surface.
lab = ["serve", "dep:sha2"]

[[bin]]
name = "serve"
path = "src/serve.rs"
required-features = ["serve"]
