[package]
name = "lance-graph-planner"
version = "0.1.0"
edition = "2021"
description = "Unified query planner: MUL+Compass -> Thinking Orchestration -> Graph Query Planning"
license = "Apache-2.0"

[dependencies]
# Core
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"

# Error handling
thiserror = "2"

# Async
tokio = { version = "1", features = ["rt", "sync"] }

# Logging
tracing = "0.1"

# Hardware acceleration layer (mandatory)
ndarray = { path = "../../../ndarray", default-features = false, features = ["std"] }

# Causal edge protocol (CausalEdge64, NarsTables, Pearl hierarchy)
causal-edge = { path = "../causal-edge" }

# p64: convergence point — both ndarray and lance-graph meet here
p64 = { path = "../../../ndarray/crates/p64" }

# p64-bridge: CausalEdge64 + bgz17 → CognitiveShader
p64-bridge = { path = "../p64-bridge" }

# bgz17: palette semiring codec (Base17 VSA, 121 tests)
bgz17 = { path = "../bgz17" }

# Contract: canonical trait surface (OrchestrationBridge, PlannerContract,
# thinking/nars/plan types). Zero-dep. Implemented in orchestration_impl.rs.
lance-graph-contract = { path = "../lance-graph-contract" }

# HTTP server (optional, behind "serve" feature)
axum = { version = "0.8", optional = true }


[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[features]
default = []
jit = []
datafusion = []
serve = ["dep:axum", "tokio/rt-multi-thread", "tokio/macros"]

[[bin]]
name = "serve"
path = "src/serve.rs"
required-features = ["serve"]
