[package]
name = "lance-graph-python"
version = "0.5.4"
edition = "2021"
authors = ["Lance Devs <dev@lancedb.com>"]
publish = false

[lib]
name = "_internal"
crate-type = ["cdylib"]

[dependencies]
arrow = { version = "58", features = ["pyarrow"] }
arrow-array = "58"
arrow-schema = "58"
arrow-ipc = "58"
datafusion = { version = "51", default-features = false }
futures = "0.3"
lance-graph = { path = "../lance-graph" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pyo3 = { version = "0.26", features = ["extension-module", "abi3-py39", "py-clone"] }
tokio = { version = "1.37", features = ["rt-multi-thread", "macros"] }
